--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
 <body>
 <h1>Discover hidden places in the world around you</h1>
 <p><a href="#">Download Excusion (Coming soon!)</a></p>
-<div><img src="#"/></div>
+    
+<video controls width="250">
+    <source src="resources/videos/excursion.mp4"
+            type="video/mp4">
+
+    Sorry, your browser doesn't support embedded videos.
+</video>    
+    
 <h2>Your personal travel guide</h2>
 <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-<div><img src="#"/></div>
-<div><img src="#"/></div>
+<p><img src="resources/images/camp.jpeg"/></p
+<p><img src="resources/images/phone.png"/></p>
 <h2>Coming Soon for iPhone and Android</h2>
 <p><a href="#">Download Excusion (Coming soon!)</a></p>
 <p class="copyright">&copy; Excursion</p>
