--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>Discover hidden places in the world around you</h1>
 <p><a href="#">Download Excusion (Coming soon!)</a></p>
     
-<video controls width="250">
+<video autoplay muted loop>
     <source src="resources/videos/excursion.mp4"
             type="video/mp4">
 
